--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <iframe src="https://www.youtube.com/embed/gimPpwZ_nz4?si=Q8BrT9i4jmxYXQUB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
-    <a href="https://drive-link-here" target="_blank" class="floating-button">Visit EPLUS+ Materials</a>
+    <a href="https://drive.google.com/drive/folders/1q59PF7j7cE5KCfIIJ-rTb5i9_NBtX4oP?usp=share_link" target="_blank" class="floating-button">Visit EPLUS+ Materials</a>
 
 </body>
 </html>
