--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
     <title>EPLUS+ Openhouse</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Import Montserrat font -->
+    <!-- IMontserrat font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <style>
         body {
@@ -49,7 +48,6 @@
             font-family: 'Montserrat', Arial, sans-serif;
         }
 
-        /* Floating button styles */
         .floating-button {
             position: fixed;
             bottom: 50px; 
@@ -74,10 +72,11 @@
         .video-container {
             position: relative;
             width: 100%;
+            height: 0;
             padding-bottom: 56.25%; /* 16:9 aspect ratio */
             margin-top: 70px;
         }
-
+        
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -85,6 +84,7 @@
             width: 100%;
             height: 100%;
         }
+        
     </style>
 </head>
 <body>
@@ -92,9 +92,10 @@
         <div class="logo">EPLUS+ Openhouse</div>
     </header>
 
-    <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/gimPpwZ_nz4?si=Q8BrT9i4jmxYXQUB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+<div class="video-container">
+    <iframe src="https://drive.google.com/file/d/1AdsK05dNnz2BMbv_dFd4C2wrOm6_Uzrn/preview" width="1920" height="1080" allow="autoplay"></iframe>
+</div>
+
 
     <a href="https://drive.google.com/drive/folders/1q59PF7j7cE5KCfIIJ-rTb5i9_NBtX4oP?usp=share_link" target="_blank" class="floating-button">Visit EPLUS+ Materials</a>
 
