--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
             left: 0;
             width: 100%;
             height: 100%;
-        }
-        
+            border: none;
+        }        
+          
     </style>
 </head>
 <body>
